[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
rocket = "0.5.1"
utoipa =    "5.3.0"
utoipa-swagger-ui = { version = "8.1.0", features = ["actix-web"] }
actix-web = "4"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.6"
home = "0.5.10"
tracing = "0.1.40"
[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
